Added a frame for the pictures in tuorial page, took out navigation tabe on tabbed loading page

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/TutorialPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/TutorialPage.xaml
@@ -20,24 +20,41 @@
                                      HorizontalOptions="CenterAndExpand">
 
                             <Frame BackgroundColor="Transparent" CornerRadius="25" HeightRequest="150">
+                                
                                 <StackLayout>
+
                                     <Label Text="{Binding Title}" HorizontalTextAlignment="Center" 
-                                           TextColor="#323749" FontSize="25" FontAttributes="Bold"  
+                                           TextColor="#5C6898" FontSize="25" FontAttributes="Bold"  
                                            FontFamily="OpenSans-Semibold.ttf"/>
                                     <Label Text="{Binding Content}" VerticalTextAlignment="Center" 
-                                           HorizontalTextAlignment="Center" FontSize="Medium" TextColor="#323749
-"
+                                           HorizontalTextAlignment="Center" FontSize="Medium" TextColor="#5C6898" 
                                            FontFamily="OpenSans-Regular.ttf" TextType="Html"/>
+                                    
                                     <Image Source="{Binding Pictures}" HeightRequest="340" Aspect="AspectFit"
-                                           HorizontalOptions="Start" Margin="0,-60,0,0"/>
+                                           HorizontalOptions="Start" Margin="0,0,0,60"/>
                                 </StackLayout>
 
                             </Frame>
 
+                            <Frame BackgroundColor="Transparent">
+
+                                <StackLayout>
+
+                                    <Image Source="{Binding Pictures}" HeightRequest="240" Aspect="AspectFill"
+                                           HorizontalOptions="Start" Margin="0,20,0,30" VerticalOptions="CenterAndExpand"
+                                           />
+
+
+                                </StackLayout>
+
+  
+                            </Frame>
+
                             <StackLayout>
+                                
                                 <ImageButton  x:Name="SkipOption"  Source="Skipbutton.png"
                                              HorizontalOptions="End" Clicked="SkipOption_Clicked" 
-                                             HeightRequest="40" WidthRequest="70" Margin="0,410,0,0" 
+                                             HeightRequest="40" WidthRequest="70" Margin="0,70,0,500" 
                                              BackgroundColor="Transparent"/>
 
 
@@ -58,12 +75,12 @@
                     <views:CarouselItem Title="Introduction" Content="KidReady is a Mental Health app that focuses on the mental wellbeing of children in the early childhood development phase." Pictures="DepressedChild.png" />
                     <views:CarouselItem Title="Insights" Content="Discover more on Mental Health in early childhood development. " />
                     <views:CarouselItem Title="Report" Content="Stay informed on your child's daily performance and behaviors." />
-                    <views:CarouselItem Title="Zones of Regulation" Content="&lt;span style=&quot;color: blue;&quot;&gt;Blue&lt;/span&gt; ,&lt;span style=&quot;color: green;&quot;&gt;Green&lt;/span&gt;,&lt;span style=&quot;color: Yellow;&quot;&gt;Yellow&lt;/span&gt;, and &lt;span style=&quot;color: Red;&quot;&gt;Red&lt;/span&gt; are the 4 colours of alertness and emotion that assists educators to identify the feelings and level of alertness in children."  />
+                    <views:CarouselItem Title="Zones of Regulation" Content="&lt;span style=&quot;color: blue;&quot;&gt;Blue&lt;/span&gt; ,&lt;span style=&quot;color:#16B900;&quot;&gt;Green&lt;/span&gt;,&lt;span style=&quot;color: #EBEB00;&quot;&gt;Yellow&lt;/span&gt;, and &lt;span style=&quot;color: #8b0000;&quot;&gt;Red&lt;/span&gt; are the 4 colours of alertness and emotion that assists educators to identify the feelings and level of alertness in children."  />
 
                 </x:Array>
             </CarouselView.ItemsSource>
         </CarouselView>
-        <IndicatorView x:Name="tutorialIndicator" IndicatorColor="#323749" SelectedIndicatorColor="LightGray" 
+        <IndicatorView x:Name="tutorialIndicator" IndicatorColor="#5C6898" SelectedIndicatorColor="LightGray" 
                        IndicatorsShape="Circle" Margin="0,50,0,35" />
 
 
