--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LandingTabbedPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LandingTabbedPage.xaml
@@ -5,7 +5,7 @@
             prism:ViewModelLocator.AutowireViewModel="True"
             x:Class="SoteriaApp.Views.LandingTabbedPage"
             xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
-    android:TabbedPage.ToolbarPlacement="Bottom">
+    android:TabbedPage.ToolbarPlacement="Bottom" NavigationPage.HasNavigationBar="False">
  
     <views:CommunityChat/>
     <views:InsightsPage/>
