moved the courasel view on the tutorial page

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LandingTabbedPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LandingTabbedPage.xaml
@@ -5,7 +5,9 @@
             prism:ViewModelLocator.AutowireViewModel="True"
             x:Class="SoteriaApp.Views.LandingTabbedPage"
             xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
-    android:TabbedPage.ToolbarPlacement="Bottom" NavigationPage.HasNavigationBar="False">
+    android:TabbedPage.ToolbarPlacement="Bottom" NavigationPage.HasNavigationBar="True" 
+            BarBackgroundColor="White" SelectedTabColor="#5C6898" 
+            BarTextColor="#5C6898" >
  
     <views:CommunityChat/>
     <views:InsightsPage/>
