--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ProfilePageFlyout.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ProfilePageFlyout.xaml
@@ -2,29 +2,53 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SoteriaApp.Views.ProfilePageFlyout"
-             Title="Flyout">
-  <StackLayout>
-    <ListView x:Name="MenuItemsListView"
-              SeparatorVisibility="None"
+             Title="Flyout" >
+
+   <StackLayout>
+       
+         <Frame 
+           BackgroundColor="Transparent"
+            Margin="0,202,0,0">
+             
+             <ListView x:Name="MenuItemsListView"
+              SeparatorVisibility="Default"
               HasUnevenRows="true"
               ItemsSource="{Binding MenuItems}">
-      <ListView.Header>
-        <Grid BackgroundColor="Gray">
+                 
+                <ListView.Header>
+                    
+                   <Grid BackgroundColor="White">
          
-        </Grid>
-      </ListView.Header>
-      <ListView.ItemTemplate>
-        <DataTemplate>
-          <ViewCell>
-            <StackLayout Padding="15,10" HorizontalOptions="FillAndExpand">
-              <Label VerticalOptions="FillAndExpand" 
-                    VerticalTextAlignment="Center" 
-                    Text="{Binding Title}" 
-                    FontSize="24"/>
-            </StackLayout>
-          </ViewCell>
-        </DataTemplate>
-      </ListView.ItemTemplate>
-    </ListView>
-  </StackLayout>
+                   </Grid>
+                    
+                </ListView.Header>
+                 
+                  <ListView.ItemTemplate>
+                      
+                       <DataTemplate>
+                     
+                            <ViewCell>
+                                
+                                 <StackLayout  Padding="15,15,0,10" 
+                                               HorizontalOptions="FillAndExpand" >
+                
+                                     <Label VerticalOptions="FillAndExpand" 
+                                            VerticalTextAlignment="Center" 
+                                            Text="{Binding Title}" 
+                                            FontSize="24" 
+                                            TextColor="#5C6898" 
+                                            FontFamily="OpenSans-Regular.ttf"/>
+
+                                 </StackLayout>
+
+                            </ViewCell>
+                           
+                       </DataTemplate>
+                      
+                  </ListView.ItemTemplate>
+                 
+                 
+             </ListView>
+         </Frame>
+   </StackLayout>
 </ContentPage>
