--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LandingTabbedPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LandingTabbedPage.xaml
@@ -5,10 +5,13 @@
             prism:ViewModelLocator.AutowireViewModel="True"
             x:Class="SoteriaApp.Views.LandingTabbedPage"
             xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
-    android:TabbedPage.ToolbarPlacement="Bottom" NavigationPage.HasNavigationBar="True" 
-            BarBackgroundColor="White" SelectedTabColor="#5C6898" 
-            BarTextColor="#5C6898" >
- 
+            android:TabbedPage.ToolbarPlacement="Bottom"
+            NavigationPage.HasNavigationBar="True" 
+            BarBackgroundColor="White"
+            SelectedTabColor="DarkSlateGray"
+            UnselectedTabColor="#5C6898"
+            BarTextColor="#5C6898">
+
     <views:CommunityChat/>
     <views:InsightsPage/>
     <views:ProfilePage/>
