--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/CommunityChat.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/CommunityChat.xaml
@@ -2,9 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+             xmlns:controls="clr-namespace:SoteriaApp.Views.Controls"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="SoteriaApp.Views.CommunityChat" Title="{Binding Title}" IconImageSource="ChatIcon">
-    
-    
-  
+             x:Class="SoteriaApp.Views.CommunityChat"
+             Title="{Binding Title}"
+             IconImageSource="ChatIcon">
+
+    <xct:LazyView x:Name="lazyView" x:TypeArguments="controls:CommunityChatControl" />
+
 </ContentPage>
